-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8269458 | 18 | Sandhya Viswanathan | P3 | Resolved | Fixed | b04 |
| JDK-8270645 | 17.0.1 | Sandhya Viswanathan | P3 | Resolved | Fixed | b03 |
The OpenJDK 17 early access build from jdk.java.net fails to load svml library. We need to give complete path for svml library to dll_load call for the load to succeed.
- backported by
-
JDK-8269458 Unable to load svml library
-
- Resolved
-
-
JDK-8270645 Unable to load svml library
-
- Resolved
-