8269335: Unable to load svml library